--- a/notebooks/MH6321_project_data_analysis.ipynb
+++ b/notebooks/MH6321_project_data_analysis.ipynb
@@ -1798,8 +1798,7 @@
     "display(HTML(z_scores.to_html()))\n",
     "\n",
     "print('\\n[INFO] P-values :')\n",
-    "display(HTML(pvalues.to_html()))\n",
-    "print(pvalues.to_latex())"
+    "display(HTML(pvalues.to_html()))"
    ]
   },
   {
