--- a/notebooks/MH6321_project_data_analysis.ipynb
+++ b/notebooks/MH6321_project_data_analysis.ipynb
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1651,75 +1651,75 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_9b363_row0_col0, #T_9b363_row0_col1, #T_9b363_row0_col2, #T_9b363_row0_col3, #T_9b363_row0_col4, #T_9b363_row1_col0, #T_9b363_row1_col1, #T_9b363_row1_col2, #T_9b363_row1_col3, #T_9b363_row1_col4, #T_9b363_row2_col0, #T_9b363_row2_col1, #T_9b363_row2_col2, #T_9b363_row2_col3, #T_9b363_row2_col4, #T_9b363_row3_col0, #T_9b363_row3_col1, #T_9b363_row3_col2, #T_9b363_row3_col3, #T_9b363_row4_col0, #T_9b363_row4_col1, #T_9b363_row4_col2, #T_9b363_row4_col3, #T_9b363_row4_col4, #T_9b363_row5_col0, #T_9b363_row5_col1, #T_9b363_row5_col2, #T_9b363_row5_col3, #T_9b363_row5_col4 {\n",
+       "#T_5835c_row0_col0, #T_5835c_row0_col1, #T_5835c_row0_col2, #T_5835c_row0_col3, #T_5835c_row0_col4, #T_5835c_row1_col0, #T_5835c_row1_col1, #T_5835c_row1_col2, #T_5835c_row1_col3, #T_5835c_row1_col4, #T_5835c_row2_col0, #T_5835c_row2_col1, #T_5835c_row2_col2, #T_5835c_row2_col3, #T_5835c_row2_col4, #T_5835c_row3_col0, #T_5835c_row3_col1, #T_5835c_row3_col2, #T_5835c_row3_col3, #T_5835c_row4_col0, #T_5835c_row4_col1, #T_5835c_row4_col2, #T_5835c_row4_col3, #T_5835c_row4_col4, #T_5835c_row5_col0, #T_5835c_row5_col1, #T_5835c_row5_col2, #T_5835c_row5_col3, #T_5835c_row5_col4 {\n",
        "  border: 1px solid black;\n",
        "  background-color: green;\n",
        "}\n",
-       "#T_9b363_row3_col4 {\n",
+       "#T_5835c_row3_col4 {\n",
        "  border: 1px solid black;\n",
        "  background-color: red;\n",
        "  color: black;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_9b363\">\n",
+       "<table id=\"T_5835c\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_9b363_level0_col0\" class=\"col_heading level0 col0\" >35-44</th>\n",
-       "      <th id=\"T_9b363_level0_col1\" class=\"col_heading level0 col1\" >44-54</th>\n",
-       "      <th id=\"T_9b363_level0_col2\" class=\"col_heading level0 col2\" >55-64</th>\n",
-       "      <th id=\"T_9b363_level0_col3\" class=\"col_heading level0 col3\" >65-74</th>\n",
-       "      <th id=\"T_9b363_level0_col4\" class=\"col_heading level0 col4\" >75-84</th>\n",
+       "      <th id=\"T_5835c_level0_col0\" class=\"col_heading level0 col0\" >35-44</th>\n",
+       "      <th id=\"T_5835c_level0_col1\" class=\"col_heading level0 col1\" >44-54</th>\n",
+       "      <th id=\"T_5835c_level0_col2\" class=\"col_heading level0 col2\" >55-64</th>\n",
+       "      <th id=\"T_5835c_level0_col3\" class=\"col_heading level0 col3\" >65-74</th>\n",
+       "      <th id=\"T_5835c_level0_col4\" class=\"col_heading level0 col4\" >75-84</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row0\" class=\"row_heading level0 row0\" >TOTCHOL</th>\n",
-       "      <td id=\"T_9b363_row0_col0\" class=\"data row0 col0\" >0.01718941532210997</td>\n",
-       "      <td id=\"T_9b363_row0_col1\" class=\"data row0 col1\" >0.7088223250993035</td>\n",
-       "      <td id=\"T_9b363_row0_col2\" class=\"data row0 col2\" >0.23085910370433993</td>\n",
-       "      <td id=\"T_9b363_row0_col3\" class=\"data row0 col3\" >0.5255120741641505</td>\n",
-       "      <td id=\"T_9b363_row0_col4\" class=\"data row0 col4\" >0.7264830073204289</td>\n",
+       "      <th id=\"T_5835c_level0_row0\" class=\"row_heading level0 row0\" >TOTCHOL</th>\n",
+       "      <td id=\"T_5835c_row0_col0\" class=\"data row0 col0\" >0.01718941532210997</td>\n",
+       "      <td id=\"T_5835c_row0_col1\" class=\"data row0 col1\" >0.7088223250993035</td>\n",
+       "      <td id=\"T_5835c_row0_col2\" class=\"data row0 col2\" >0.23085910370433993</td>\n",
+       "      <td id=\"T_5835c_row0_col3\" class=\"data row0 col3\" >0.5255120741641505</td>\n",
+       "      <td id=\"T_5835c_row0_col4\" class=\"data row0 col4\" >0.7264830073204289</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row1\" class=\"row_heading level0 row1\" >SYSBP</th>\n",
-       "      <td id=\"T_9b363_row1_col0\" class=\"data row1 col0\" >0.7055884827051189</td>\n",
-       "      <td id=\"T_9b363_row1_col1\" class=\"data row1 col1\" >0.12417342227348245</td>\n",
-       "      <td id=\"T_9b363_row1_col2\" class=\"data row1 col2\" >0.19399264502974412</td>\n",
-       "      <td id=\"T_9b363_row1_col3\" class=\"data row1 col3\" >0.022134716240489502</td>\n",
-       "      <td id=\"T_9b363_row1_col4\" class=\"data row1 col4\" >0.5014965096646875</td>\n",
+       "      <th id=\"T_5835c_level0_row1\" class=\"row_heading level0 row1\" >SYSBP</th>\n",
+       "      <td id=\"T_5835c_row1_col0\" class=\"data row1 col0\" >0.7055884827051189</td>\n",
+       "      <td id=\"T_5835c_row1_col1\" class=\"data row1 col1\" >0.12417342227348245</td>\n",
+       "      <td id=\"T_5835c_row1_col2\" class=\"data row1 col2\" >0.19399264502974412</td>\n",
+       "      <td id=\"T_5835c_row1_col3\" class=\"data row1 col3\" >0.022134716240489502</td>\n",
+       "      <td id=\"T_5835c_row1_col4\" class=\"data row1 col4\" >0.5014965096646875</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row2\" class=\"row_heading level0 row2\" >DIABP</th>\n",
-       "      <td id=\"T_9b363_row2_col0\" class=\"data row2 col0\" >0.7857703753433357</td>\n",
-       "      <td id=\"T_9b363_row2_col1\" class=\"data row2 col1\" >0.6888379998923456</td>\n",
-       "      <td id=\"T_9b363_row2_col2\" class=\"data row2 col2\" >0.4629433053235792</td>\n",
-       "      <td id=\"T_9b363_row2_col3\" class=\"data row2 col3\" >0.7336920129190965</td>\n",
-       "      <td id=\"T_9b363_row2_col4\" class=\"data row2 col4\" >0.043758864490755334</td>\n",
+       "      <th id=\"T_5835c_level0_row2\" class=\"row_heading level0 row2\" >DIABP</th>\n",
+       "      <td id=\"T_5835c_row2_col0\" class=\"data row2 col0\" >0.7857703753433357</td>\n",
+       "      <td id=\"T_5835c_row2_col1\" class=\"data row2 col1\" >0.6888379998923456</td>\n",
+       "      <td id=\"T_5835c_row2_col2\" class=\"data row2 col2\" >0.4629433053235792</td>\n",
+       "      <td id=\"T_5835c_row2_col3\" class=\"data row2 col3\" >0.7336920129190965</td>\n",
+       "      <td id=\"T_5835c_row2_col4\" class=\"data row2 col4\" >0.043758864490755334</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row3\" class=\"row_heading level0 row3\" >CIGPDAY</th>\n",
-       "      <td id=\"T_9b363_row3_col0\" class=\"data row3 col0\" >0.6939684412776459</td>\n",
-       "      <td id=\"T_9b363_row3_col1\" class=\"data row3 col1\" >0.8262661064306402</td>\n",
-       "      <td id=\"T_9b363_row3_col2\" class=\"data row3 col2\" >0.26875309899944055</td>\n",
-       "      <td id=\"T_9b363_row3_col3\" class=\"data row3 col3\" >0.3527855394203404</td>\n",
-       "      <td id=\"T_9b363_row3_col4\" class=\"data row3 col4\" >1.451428351326403e-39</td>\n",
+       "      <th id=\"T_5835c_level0_row3\" class=\"row_heading level0 row3\" >CIGPDAY</th>\n",
+       "      <td id=\"T_5835c_row3_col0\" class=\"data row3 col0\" >0.6939684412776459</td>\n",
+       "      <td id=\"T_5835c_row3_col1\" class=\"data row3 col1\" >0.8262661064306402</td>\n",
+       "      <td id=\"T_5835c_row3_col2\" class=\"data row3 col2\" >0.26875309899944055</td>\n",
+       "      <td id=\"T_5835c_row3_col3\" class=\"data row3 col3\" >0.3527855394203404</td>\n",
+       "      <td id=\"T_5835c_row3_col4\" class=\"data row3 col4\" >1.451428351326403e-39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row4\" class=\"row_heading level0 row4\" >BMI</th>\n",
-       "      <td id=\"T_9b363_row4_col0\" class=\"data row4 col0\" >0.09996064796381246</td>\n",
-       "      <td id=\"T_9b363_row4_col1\" class=\"data row4 col1\" >0.6514488017098923</td>\n",
-       "      <td id=\"T_9b363_row4_col2\" class=\"data row4 col2\" >0.7994586043420178</td>\n",
-       "      <td id=\"T_9b363_row4_col3\" class=\"data row4 col3\" >0.20029919770260862</td>\n",
-       "      <td id=\"T_9b363_row4_col4\" class=\"data row4 col4\" >0.6247811550659195</td>\n",
+       "      <th id=\"T_5835c_level0_row4\" class=\"row_heading level0 row4\" >BMI</th>\n",
+       "      <td id=\"T_5835c_row4_col0\" class=\"data row4 col0\" >0.09996064796381246</td>\n",
+       "      <td id=\"T_5835c_row4_col1\" class=\"data row4 col1\" >0.6514488017098923</td>\n",
+       "      <td id=\"T_5835c_row4_col2\" class=\"data row4 col2\" >0.7994586043420178</td>\n",
+       "      <td id=\"T_5835c_row4_col3\" class=\"data row4 col3\" >0.20029919770260862</td>\n",
+       "      <td id=\"T_5835c_row4_col4\" class=\"data row4 col4\" >0.6247811550659195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_9b363_level0_row5\" class=\"row_heading level0 row5\" >GLUCOSE</th>\n",
-       "      <td id=\"T_9b363_row5_col0\" class=\"data row5 col0\" >0.027160746760389032</td>\n",
-       "      <td id=\"T_9b363_row5_col1\" class=\"data row5 col1\" >0.16259969567325594</td>\n",
-       "      <td id=\"T_9b363_row5_col2\" class=\"data row5 col2\" >0.09606409152564999</td>\n",
-       "      <td id=\"T_9b363_row5_col3\" class=\"data row5 col3\" >0.9292229512071567</td>\n",
-       "      <td id=\"T_9b363_row5_col4\" class=\"data row5 col4\" >0.1584966819977338</td>\n",
+       "      <th id=\"T_5835c_level0_row5\" class=\"row_heading level0 row5\" >GLUCOSE</th>\n",
+       "      <td id=\"T_5835c_row5_col0\" class=\"data row5 col0\" >0.027160746760389032</td>\n",
+       "      <td id=\"T_5835c_row5_col1\" class=\"data row5 col1\" >0.16259969567325594</td>\n",
+       "      <td id=\"T_5835c_row5_col2\" class=\"data row5 col2\" >0.09606409152564999</td>\n",
+       "      <td id=\"T_5835c_row5_col3\" class=\"data row5 col3\" >0.9292229512071567</td>\n",
+       "      <td id=\"T_5835c_row5_col4\" class=\"data row5 col4\" >0.1584966819977338</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -1730,22 +1730,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\\begin{tabular}{llllll}\n",
-      " & 35-44 & 44-54 & 55-64 & 65-74 & 75-84 \\\\\n",
-      "TOTCHOL & \\border1px solid black \\background-colorgreen 0.01718941532210997 & \\border1px solid black \\background-colorgreen 0.7088223250993035 & \\border1px solid black \\background-colorgreen 0.23085910370433993 & \\border1px solid black \\background-colorgreen 0.5255120741641505 & \\border1px solid black \\background-colorgreen 0.7264830073204289 \\\\\n",
-      "SYSBP & \\border1px solid black \\background-colorgreen 0.7055884827051189 & \\border1px solid black \\background-colorgreen 0.12417342227348245 & \\border1px solid black \\background-colorgreen 0.19399264502974412 & \\border1px solid black \\background-colorgreen 0.022134716240489502 & \\border1px solid black \\background-colorgreen 0.5014965096646875 \\\\\n",
-      "DIABP & \\border1px solid black \\background-colorgreen 0.7857703753433357 & \\border1px solid black \\background-colorgreen 0.6888379998923456 & \\border1px solid black \\background-colorgreen 0.4629433053235792 & \\border1px solid black \\background-colorgreen 0.7336920129190965 & \\border1px solid black \\background-colorgreen 0.043758864490755334 \\\\\n",
-      "CIGPDAY & \\border1px solid black \\background-colorgreen 0.6939684412776459 & \\border1px solid black \\background-colorgreen 0.8262661064306402 & \\border1px solid black \\background-colorgreen 0.26875309899944055 & \\border1px solid black \\background-colorgreen 0.3527855394203404 & \\border1px solid black \\background-colorred \\colorblack 1.451428351326403e-39 \\\\\n",
-      "BMI & \\border1px solid black \\background-colorgreen 0.09996064796381246 & \\border1px solid black \\background-colorgreen 0.6514488017098923 & \\border1px solid black \\background-colorgreen 0.7994586043420178 & \\border1px solid black \\background-colorgreen 0.20029919770260862 & \\border1px solid black \\background-colorgreen 0.6247811550659195 \\\\\n",
-      "GLUCOSE & \\border1px solid black \\background-colorgreen 0.027160746760389032 & \\border1px solid black \\background-colorgreen 0.16259969567325594 & \\border1px solid black \\background-colorgreen 0.09606409152564999 & \\border1px solid black \\background-colorgreen 0.9292229512071567 & \\border1px solid black \\background-colorgreen 0.1584966819977338 \\\\\n",
-      "\\end{tabular}\n",
-      "\n"
-     ]
     }
    ],
    "source": [
